generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  TEACHER
  STUDENT
}

enum Difficulty {
  EASY
  MEDIUM
  HARD
}

enum ExamStatus {
  DRAFT
  PUBLISHED
  CLOSED
}

enum AttemptStatus {
  IN_PROGRESS
  SUBMITTED
  EXPIRED
}

model User {
  id           String   @id @default(uuid())
  email        String   @unique
  passwordHash String   @map("password_hash")
  fullName     String   @map("full_name")
  role         Role
  isActive     Boolean  @default(true) @map("is_active")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  subjects         Subject[]        @relation("TeacherSubjects")
  questionsCreated Question[]       @relation("QuestionCreator")
  examsCreated     Exam[]           @relation("ExamCreator")
  studentAssignments ExamAssignment[] @relation("StudentAssignments")
  assignmentsMade  ExamAssignment[] @relation("AssignedBy")

  @@index([role])
  @@map("users")
}

model Subject {
  id          String   @id @default(uuid())
  code        String
  name        String
  description String?
  teacherId   String   @map("teacher_id")
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  teacher   User       @relation("TeacherSubjects", fields: [teacherId], references: [id])
  questions Question[]
  exams     Exam[]

  @@unique([teacherId, code])
  @@map("subjects")
}

model Question {
  id         String     @id @default(uuid())
  subjectId  String     @map("subject_id")
  content    String
  difficulty Difficulty
  points     Decimal    @default(1) @db.Decimal(5, 2)
  createdBy  String     @map("created_by")
  createdAt  DateTime   @default(now()) @map("created_at")
  updatedAt  DateTime   @updatedAt @map("updated_at")

  subject       Subject          @relation(fields: [subjectId], references: [id])
  creator       User             @relation("QuestionCreator", fields: [createdBy], references: [id])
  options       QuestionOption[]
  examQuestions ExamQuestion[]
  attemptAnswers AttemptAnswer[]

  @@index([subjectId])
  @@map("questions")
}

model QuestionOption {
  id         String  @id @default(uuid())
  questionId String  @map("question_id")
  label      String  @db.Char(1)
  content    String
  isCorrect  Boolean @default(false) @map("is_correct")

  question       Question        @relation(fields: [questionId], references: [id], onDelete: Cascade)
  attemptAnswers AttemptAnswer[]

  @@map("question_options")
}

model Exam {
  id                     String     @id @default(uuid())
  subjectId              String     @map("subject_id")
  title                  String
  description            String?
  durationMinutes        Int        @map("duration_minutes")
  openAt                 DateTime   @map("open_at")
  closeAt                DateTime   @map("close_at")
  maxAttempts            Int        @default(1) @map("max_attempts")
  showAnswersAfterSubmit Boolean    @default(false) @map("show_answers_after_submit")
  status                 ExamStatus
  createdBy              String     @map("created_by")
  createdAt              DateTime   @default(now()) @map("created_at")
  updatedAt              DateTime   @updatedAt @map("updated_at")

  subject     Subject          @relation(fields: [subjectId], references: [id])
  creator     User             @relation("ExamCreator", fields: [createdBy], references: [id])
  questions   ExamQuestion[]
  assignments ExamAssignment[]

  @@index([createdBy, status])
  @@map("exams")
}

model ExamQuestion {
  examId     String @map("exam_id")
  questionId String @map("question_id")
  orderIndex Int    @map("order_index")

  exam     Exam     @relation(fields: [examId], references: [id], onDelete: Cascade)
  question Question @relation(fields: [questionId], references: [id])

  @@id([examId, questionId])
  @@map("exam_questions")
}

model ExamAssignment {
  id         String   @id @default(uuid())
  examId     String   @map("exam_id")
  studentId  String   @map("student_id")
  assignedBy String   @map("assigned_by")
  assignedAt DateTime @default(now()) @map("assigned_at")

  exam     Exam          @relation(fields: [examId], references: [id], onDelete: Cascade)
  student  User          @relation("StudentAssignments", fields: [studentId], references: [id])
  assigner User          @relation("AssignedBy", fields: [assignedBy], references: [id])
  attempts ExamAttempt[]

  @@unique([examId, studentId])
  @@index([studentId])
  @@index([examId])
  @@map("exam_assignments")
}

model ExamAttempt {
  id           String        @id @default(uuid())
  assignmentId String        @map("assignment_id")
  startedAt    DateTime      @map("started_at")
  expiresAt    DateTime      @map("expires_at")
  submittedAt  DateTime?     @map("submitted_at")
  score        Decimal?      @db.Decimal(7, 2)
  maxScore     Decimal       @map("max_score") @db.Decimal(7, 2)
  status       AttemptStatus

  assignment ExamAssignment  @relation(fields: [assignmentId], references: [id])
  answers    AttemptAnswer[]

  @@index([assignmentId, status])
  @@map("exam_attempts")
}

model AttemptAnswer {
  id               String  @id @default(uuid())
  attemptId        String  @map("attempt_id")
  questionId       String  @map("question_id")
  selectedOptionId String? @map("selected_option_id")
  isCorrect        Boolean? @map("is_correct")

  attempt        ExamAttempt    @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  question       Question       @relation(fields: [questionId], references: [id])
  selectedOption QuestionOption? @relation(fields: [selectedOptionId], references: [id])

  @@unique([attemptId, questionId])
  @@map("attempt_answers")
}
